# CAM-C1126S2U

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
doc/: cheatsheet.md  readme-draft.md
include/: postprocess.h
lib/: libcurl.so.4.8.0
scripts/: download-rknn-toolkit.sh  init-build-machine.sh  install-aws-greengrass.sh  install-sdk.sh  setup-device.sh  timeout_pull_frame.sh
src/: camera_handler.cc  camera_handler.h  inference_handler.cc  inference_handler.h  main.cc  utils.cc  utils.h  video_writer.cc  video_writer.h
src/archive/: main_old.cc
